trying new background photo

--- a/gallery.html
+++ b/gallery.html
@@ -9,12 +9,22 @@
 </head>
 <body>
 	<div id="carousel">
+		<!-- Arrow images from Instagram -->
+		<div id="carousel-controls">
+		    <button id="button-previous" class="hidden">
+		        <img src="assets/img/leftarrow.png" alt="Previous">
+		    </button>
+		    <button id="button-next">
+		        <img src="assets/img/rightarrow.png" alt="Next">
+		    </button>
+		</div>
 
-        <div id="carousel-controls">
+        <!-- <div id="carousel-controls">
          
             <button id="button-previous" class="hidden">Previous</button>
-            <button id="button-next">Next</button>    
-        </div>
+            <button id="button-next">Next</button> 
+
+        </div> -->
      
         <div id="carousel-image-row">
             <!-- shape1-4 images sourced from CrickieB Photography -->
